# ebyte-sx1276

./: .gitignore  Dockerfile  Makefile.am  README  README.md  configure.ac
.github/workflows/: c-cpp.yml  distribute.yml
scripts/: Makefile.am  e32rx  e32tx
src/: Makefile.am  become_daemon.c  become_daemon.h  connection.c  connection.h  control.c  control.h  convert.c  convert.h  e32.c  e32.h  e32tx  error.c  error.h  gpio.c  gpio.h  list.c  list.h  loratx.c  lorax.c  lorax.h  lorax_control.c  lorax_echo.c  lorax_message.c  main.c  main_lorax.c  message.c  message.h  misc.c  misc.h  neighbor.c  neighbor.h  options.c  options.h  options_lorax.c  options_lorax.h  packet.c  packet.h  pty.c  pty.h  (+4 more)
systemd/: Makefile.am  e32.service  e32tx.service  e32tx.timer  lorax-echo.service  lorax.service
test/: Makefile.am  e32_test.py  test_control.c  test_convert.c  test_list.c  test_message.c  test_misc.c  test_options.c  test_options_lorax.c  test_packet.c
